--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,65 @@
-node_modules
-# Keep environment variables out of version control
-.env*
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
+# Build outputs
+dist/
+build/
+*.tsbuildinfo
+
+# Environment variables
+.env*
+!.env.example
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Generated Prisma files (keep schema.prisma)
 /src/generated/prisma
+
+# Temporary files
+tmp/
+temp/
+
+# Build artifacts that might accidentally get created in src
+src/**/dist/
+src/**/*.js.map
+src/**/*.d.ts
