--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
     "@prisma/client": "^6.8.2",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.9.0",
@@ -40,6 +41,7 @@
     "express-rate-limit": "^7.5.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -52,6 +54,7 @@
     "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.21",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
