--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "weather:monitor": "ts-node scripts/weather-cli.ts monitor",
     "weather:test": "ts-node scripts/weather-cli.ts test",
     "weather:suggestions": "ts-node scripts/weather-cli.ts suggestions",
-    "weather:fetch": "ts-node scripts/weather-cli.ts fetch"
+    "weather:fetch": "ts-node scripts/weather-cli.ts fetch",
+    "test:weather-scoring": "ts-node test-weather-scoring.ts",
+    "scoring:calculate": "ts-node -e \"require('./src/services/weatherScoringService').WeatherScoringService; console.log('🎯 Calculating weather scores...'); const s = new (require('./src/services/weatherScoringService').WeatherScoringService)(); s.calculateAllProvinceScores().then(r => console.log('✅ Done:', r.length, 'provinces'))\"",
+    "scoring:test": "ts-node test-weather-scoring.ts"
   },
   "keywords": [],
   "author": "",
