feat: Implement comprehensive image bug fixes and debugging tools
- Added IMAGE_BUG_FIX_REPORT.md for documentation of identified issues and solutions.
- Created debug-images.ts for analyzing image status and identifying broken/orphaned images.
- Introduced repair-images.ts to fix broken image references and clean up orphaned files.
- Enhanced uploadService.ts with safe deletion and validation functions.
- Updated postController.ts to ensure safe image deletion with rollback capabilities.
- Added new API endpoints for checking image status and retrieving image operation logs.
- Implemented imageLogger.ts for tracking image operations and errors.
- Created test-images.ts for testing image consistency in the database and storage.
- Developed verify-fix.sh script for verifying the image upload bug fix process.
- Updated package.json to include new scripts for debugging and repairing images.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "weather:fetch": "ts-node scripts/weather-cli.ts fetch",
     "test:weather-scoring": "ts-node test-weather-scoring.ts",
     "scoring:calculate": "ts-node -e \"require('./src/services/weatherScoringService').WeatherScoringService; console.log('🎯 Calculating weather scores...'); const s = new (require('./src/services/weatherScoringService').WeatherScoringService)(); s.calculateAllProvinceScores().then(r => console.log('✅ Done:', r.length, 'provinces'))\"",
-    "scoring:test": "ts-node test-weather-scoring.ts"
+    "scoring:test": "ts-node test-weather-scoring.ts",
+    "debug:images": "ts-node debug-images.ts",
+    "debug:images:cleanup": "ts-node debug-images.ts --cleanup",
+    "debug:images:cleanup-force": "ts-node debug-images.ts --cleanup --no-dry-run",
+    "repair:images": "ts-node repair-images.ts",
+    "repair:images:force": "ts-node repair-images.ts --no-dry-run"
   },
   "keywords": [],
   "author": "",
