feat: Add additional configuration options for Google Cloud Storage and Email Service in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Database
 DATABASE_URL="postgresql://username:password@localhost:5432/weather_db"
+# หรือใช้ SQLite สำหรับ demo: DATABASE_URL="file:./dev.db"
 
 # JWT Secret (generate a secure random string for production)
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
@@ -7,6 +8,19 @@ JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 # API Keys
 AQICN_API_TOKEN="your-aqicn-api-token-from-waqi.info"
 GOOGLE_MAPS_API_KEY="your-google-maps-api-key"
+
+# Google Cloud Storage (สำหรับ upload รูปภาพ)
+GOOGLE_CLOUD_PROJECT_ID="your-google-cloud-project-id"
+GOOGLE_CLOUD_KEY_FILE="./path-to-your-service-account.json"
+GOOGLE_CLOUD_STORAGE_BUCKET="weather-app-store"
+
+# Google OAuth (สำหรับ login ด้วย Google)
+GOOGLE_CLIENT_ID="your-google-oauth-client-id"
+GOOGLE_CLIENT_SECRET="your-google-oauth-client-secret"
+
+# Email Service (สำหรับ password reset)
+EMAIL_USER="your-email@gmail.com"
+EMAIL_PASSWORD="your-app-password"
 
 # Server Configuration
 PORT=3000
